--- a/.github/workflows/psych63.yml
+++ b/.github/workflows/psych63.yml
@@ -140,6 +140,40 @@ jobs:
         with:
           name: P-Slice.0.6.3.android
           path: 'export/PE0.6.3/release/android/bin/app/build/outputs/apk/release/*.apk'
+  buildAndroid-SaveDir:
+    # The type of runner that the job will run on
+    runs-on: macos-15
+    # Steps represent a sequence of tasks that will be executed as part of the job
+    steps:
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - uses: actions/checkout@v4.1.7
+
+      - uses: krdlab/setup-haxe@master
+        with:
+          haxe-version: 4.3.4
+      # Runs a set of commands using the runners shell
+      - name: Install Haxelib
+        run: |
+          haxelib setup ~/haxelib
+          chmod +x ./setup/mobile.sh
+          sh ./setup/mobile.sh
+      - name: Configure Android
+        run: |
+          haxelib run lime config ANDROID_SDK $ANDROID_HOME
+          haxelib run lime config ANDROID_NDK_ROOT $ANDROID_NDK_LATEST_HOME
+          haxelib run lime config JAVA_HOME $JAVA_HOME_17_arm64
+          haxelib run lime config ANDROID_SETUP true
+      - name: Skip SScript setup mode
+        run: echo 'oy9:showMacroty8:loopCosti25y10:includeAllfg' >> ~/settings.cocoa
+      - name: Create Version Tag
+        run: echo "${{github.run_id}}" > VERSION
+      - name: Compile
+        run: haxelib run lime build Project.xml android --app-version="4.0.0-${{ github.run_id}}" -D officialBuild -D 32bits_disabled -D PUBLIC_SAVE_DIRECTORY
+      - name: Publish Artifact
+        uses: actions/upload-artifact@v4.3.4
+        with:
+          name: P-Slice.0.6.3.android-SaveDir
+          path: 'export/PE0.6.3/release/android/bin/app/build/outputs/apk/release/*.apk'
   buildIOS:
     # The type of runner that the job will run on
     runs-on: macos-15
